<resources>
    <string name="app_name" translatable="false">SerieShop</string>
    <string name="iniciar">Iniciar sesión</string>
    <string name="regis">Registrarse</string>
    <string name="olvi">Olvide la contraseña</string>
    <string name="sa">Salir</string>
    <string name="usu">Usuario</string>
    <string name="pas">Contraseña</string>
    <string name="comp">Debes de rellenar todos los campos</string>
    <string name="no">Usuario o contraseña incorrectos</string>
    <string name="b">Volver</string>
    <string name="toast">Usa el boton para volver</string>
    <string name="nom">Nombre de usuario</string>
    <string name="cont">Tarjeta de credito</string>
    <string name="gen">Genero favorito</string>
    <string name="com">Comedia</string>
    <string name="acc">Accion</string>
    <string name="fant">Fantasia</string>
    <string name="terr">Terror</string>
    <string name="dra">Drama</string>
    <string name="usuno">El usuario ya existe</string>
    <string name="ususi">Usuario registrado</string>
    <string name="re">Renovar</string>
    <string name="olvi2">Usuario o tarjeta de credito incorrecta</string>
    <string name="newpa">Tu nueva contraseña es:</string>
    <string name="cata">Catalogo</string>
    <string name="my">Mi cuenta</string>
    <string name="wel">Bienvenido</string>
    <string name="todo">TODO</string>
    <string name="ofer">OFERTAS</string>
    <string name="rec">RECOMIENDA</string>
    <string name="toastc">No hay ninguna serie de tu genero favorito</string>
    <string name="modi">Modificar</string>
    <string name="exit">Pulse en salir para cerrar</string>
    <string name="carro">Carrito</string>
    <string name="pag">Pagar</string>
    <string name="limp">Limpiar</string>
    <string name="total">Total a pagar:</string>
    <string name="pagado">Pago realizado con exito y factura creada en la tarjeta sd</string>
    <string name="suj">Pagado por</string>
    <string name="problem">En caso de algun problema contacte con nuestros tecnicos a traves de ayosemgngnz@gmail.com</string>
    <string name="factu">Factura del dia:</string>
    <string name="canti">Cantidad</string>
    <string name="mas">+ Carrito</string>
    <string name="addserie">+ Añadir serie</string>
    <string name="admin">Administrador</string>
    <string name="usuregi">Ahora mismo tenemos</string>
    <string name="usuregi2">usuarios registrados</string>
    <string name="noms">Nombre</string>
    <string name="gens">Genero</string>
    <string name="desc">Descripcion</string>
    <string name="imag">Imagen</string>
    <string name="pre">Precio</string>
    <string name="oferta">En oferta</string>
    <string name="aña">Añadir</string>
    <string name="hayof">En estos momentos no hay ninguna oferta</string>
    <string name="elija">Elija para modificar</string>
    <string name="borrado">Serie eliminada</string>
    <string name="modificado">Serie modificada</string>
</resources>
