<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/b"
    tools:context="com.example.ayose.proyecto2.AddSerie">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addserie"
        android:layout_centerHorizontal="true"
        android:textSize="40dp"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/noms"
        android:textSize="20dp"
        android:layout_marginTop="80dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/name"
        android:layout_marginTop="95dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/gens"
        android:textSize="20dp"
        android:layout_marginTop="140dp"/>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spi"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="170dp"
        >
    </Spinner>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/desc"
        android:textSize="20dp"
        android:layout_marginTop="210dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/desc"
        android:layout_marginTop="225dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/imag"
        android:textSize="20dp"
        android:layout_marginTop="275dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ima"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="295dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pre"
        android:layout_centerHorizontal="true"
        android:textSize="20dp"
        android:layout_marginTop="350dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/prize"
        android:inputType="number"
        android:layout_marginTop="365dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/oferta"
        android:layout_centerHorizontal="true"
        android:textSize="20dp"
        android:layout_marginTop="410dp"/>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spi2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="440dp">

    </Spinner>
    <Button
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:text="@string/aña"
        android:textColor="#000000"
        android:id="@+id/but"
        android:layout_marginTop="490dp"
        android:background="@drawable/but"/>


</RelativeLayout>
