<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/b"
    tools:context="com.example.ayose.proyecto2.ForgotPass">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/olvi"
        android:textSize="30dp"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/usu"
        android:layout_centerHorizontal="true"
        android:textSize="20dp"
        android:layout_marginTop="100dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/nom"
        android:layout_marginTop="150dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/cont"
        android:textSize="20dp"
        android:layout_marginTop="230dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       android:layout_centerHorizontal="true"
        android:layout_marginTop="280dp"
        android:inputType="number"
        android:id="@+id/tar"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="380dp"
        android:id="@+id/fina"
        android:textSize="20dp"/>

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/re"
        android:background="@drawable/but"
        android:layout_marginTop="475dp"
        android:textColor="#000000"
        android:id="@+id/ren"/>
    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="170dp"
        android:text="@string/b"
        android:background="@drawable/but"
        android:layout_marginTop="475dp"
        android:textColor="#000000"
        android:id="@+id/volv"/>
</RelativeLayout>
