<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/b"
    tools:context="com.example.ayose.proyecto2.Registrarse">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/regis"
        android:layout_centerHorizontal="true"
        android:textSize="40dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nom"
        android:layout_centerHorizontal="true"
        android:textSize="20dp"
        android:layout_marginTop="100dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/nom"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="130dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pas"
        android:layout_centerHorizontal="true"
        android:textSize="20dp"
        android:layout_marginTop="190dp"
        android:id="@+id/textView2" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/pass"
        android:password="true"
        android:layout_marginTop="220dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cont"
        android:textSize="20dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="280dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="310dp"
        android:id="@+id/tarjeta"
        android:numeric="integer"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/gen"
        android:layout_marginTop="370dp"
        android:textSize="20dp"
        />

    <Spinner
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spi"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="400dp">

    </Spinner>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/regis"
        android:background="@drawable/but"
        android:layout_marginTop="475dp"
        android:textColor="#000000"
        android:id="@+id/re"
        />


</RelativeLayout>
