<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/b"
    tools:context="com.example.ayose.proyecto2.Iniciar">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/iniciar"
        android:layout_centerHorizontal="true"
        android:textSize="40dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/usu"
        android:layout_centerHorizontal="true"
        android:textSize="20dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/user"
        android:layout_marginTop="130dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/pas"
        android:textSize="20dp"
        android:layout_marginTop="190dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/pass"
        android:inputType="textPassword"
        android:layout_marginTop="220dp"/>

    <Button
        android:layout_width="200dp"
        android:textColor="#000000"
        android:layout_centerHorizontal="true"
        android:text="@string/iniciar"
        android:id="@+id/log"
        android:layout_height="50dp"
        android:layout_marginTop="280dp"
        android:background="@drawable/but"
        />

    <Button
        android:layout_width="200dp"
        android:textColor="#000000"
        android:layout_centerHorizontal="true"
        android:text="@string/b"
        android:id="@+id/b"
        android:layout_height="50dp"
        android:layout_marginTop="350dp"
        android:background="@drawable/but"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/msg"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="450dp"
        android:textSize="20dp"/>

</RelativeLayout>
