<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/b"
    tools:context="com.example.ayose.proyecto2.ShopUser">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="40dp"
        android:text="@string/carro"
        android:layout_centerHorizontal="true"/>

    <ListView
        android:layout_width="wrap_content"
        android:id="@+id/list"
        android:layout_marginTop="50dp"
        android:layout_height="wrap_content">
    </ListView>

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/pag"
        android:background="@drawable/but"
        android:layout_marginTop="475dp"
        android:textColor="#000000"
        android:id="@+id/but"/>
    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="170dp"
        android:text="@string/limp"
        android:background="@drawable/but"
        android:layout_marginTop="475dp"
        android:textColor="#000000"
        android:id="@+id/clean"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pagar"
        android:layout_marginTop="430dp"
        android:textSize="20dp"/>



</RelativeLayout>
