<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/b"
    tools:context="com.example.ayose.proyecto2.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="SerieShop"
        android:textSize="40dp"
        android:textColor="#FFFFFF"

        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:src="@drawable/series"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:id="@+id/imageView" />

    <Button
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="250dp"
        android:text="@string/iniciar"
        android:textColor="#000000"
        android:background="@drawable/but"
        android:id="@+id/ini"/>

    <Button
        android:layout_width="200dp"
        android:background="@drawable/but"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/ini"
        android:layout_marginTop="20dp"
        android:textColor="#000000"
        android:text="@string/regis"
        android:id="@+id/re"/>

    <Button
        android:layout_width="200dp"
        android:background="@drawable/but"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:textColor="#000000"
        android:layout_below="@+id/re"
        android:text="@string/olvi"
        android:id="@+id/olv"/>

    <Button
        android:layout_width="200dp"
        android:background="@drawable/but"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:textColor="#000000"
        android:layout_below="@+id/olv"
        android:text="@string/sa"
        android:id="@+id/ex"/>

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
