<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/b"
    tools:context="com.example.ayose.proyecto2.PanelAdmin">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="40dp"
        android:text="@string/admin"
        />

    <Button
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:background="@drawable/but"
        android:id="@+id/add"
        android:text="@string/addserie"
        android:textColor="#000000"
        android:layout_marginTop="100dp"
        android:layout_centerHorizontal="true"
        />

    <Button
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:background="@drawable/but"
        android:id="@+id/mod"
        android:text="@string/modi"
        android:textColor="#000000"
        android:layout_marginTop="170dp"
        android:layout_centerHorizontal="true"
        />



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/user"
        android:layout_marginTop="310dp"/>

    <Button
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="400dp"
        android:id="@+id/exit"
        android:background="@drawable/turnoff"/>

</RelativeLayout>
