<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/b"
    tools:context="com.example.ayose.proyecto2.DetailsProducts">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="20dp"
        android:id="@+id/nom"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:id="@+id/foto"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/precio"
        android:layout_marginLeft="50dp"
        android:textSize="20dp"
        android:layout_marginTop="300dp"
      />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/gen"
        android:layout_marginTop="300dp"
        android:textSize="20dp"
        android:layout_marginLeft="200dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/desc"
        android:textSize="15dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="350dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/canti"
        android:layout_marginTop="400dp"
        android:textSize="20dp"
        android:layout_marginLeft="50dp"/>
   <Spinner
       android:layout_width="wrap_content"
       android:layout_marginTop="400dp"
       android:layout_marginLeft="200dp"
       android:layout_height="wrap_content"
       android:id="@+id/cant"/>

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/mas"
        android:background="@drawable/but"
        android:layout_marginTop="475dp"
        android:textColor="#000000"
        android:id="@+id/carr"/>
    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="170dp"
        android:text="@string/b"
        android:background="@drawable/but"
        android:layout_marginTop="475dp"
        android:textColor="#000000"
        android:id="@+id/can"/>
</RelativeLayout>
